; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_guard_ast.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_guard_ast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i64, i64 }

@.str = private unnamed_addr constant [25 x i8] c"guard_exc_info %llx %llx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @guard_ast(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %3, align 8
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %4, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @EXC_GUARD_DECODE_GUARD_TYPE(i64 %19)
  switch i32 %20, label %37 [
    i32 130, label %21
    i32 131, label %22
    i32 132, label %27
    i32 129, label %32
  ]

21:                                               ; preds = %1
  br label %41

22:                                               ; preds = %1
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* %4, align 8
  %26 = call i32 @mach_port_guard_ast(%struct.TYPE_9__* %23, i64 %24, i64 %25)
  br label %41

27:                                               ; preds = %1
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %29 = load i64, i64* %3, align 8
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @fd_guard_ast(%struct.TYPE_9__* %28, i64 %29, i64 %30)
  br label %41

32:                                               ; preds = %1
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %34 = load i64, i64* %3, align 8
  %35 = load i64, i64* %4, align 8
  %36 = call i32 @virt_memory_guard_ast(%struct.TYPE_9__* %33, i64 %34, i64 %35)
  br label %41

37:                                               ; preds = %1
  %38 = load i64, i64* %3, align 8
  %39 = load i64, i64* %4, align 8
  %40 = call i32 @panic(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %38, i64 %39)
  br label %41

41:                                               ; preds = %37, %32, %27, %22, %21
  ret void
}

declare dso_local i32 @EXC_GUARD_DECODE_GUARD_TYPE(i64) #1

declare dso_local i32 @mach_port_guard_ast(%struct.TYPE_9__*, i64, i64) #1

declare dso_local i32 @fd_guard_ast(%struct.TYPE_9__*, i64, i64) #1

declare dso_local i32 @virt_memory_guard_ast(%struct.TYPE_9__*, i64, i64) #1

declare dso_local i32 @panic(i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
